--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>trpg</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+    <meta name="renderer" content="webkit">
+    <meta name="author" content="lhzbxx,lhzbxx@gmail.com">
+    <title>TRPG.tools</title>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        background: #eee;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
